Sunday, 18th January, James Turner <james@worldforge.org>

	* Patch from Ron Steinke : make Factory.h use forward declared Atlas
	  types, to avoid dragging in huge chunks of Atlas::Objects and all the
	  Atlas::Mesage stuff.

Saturday, 17th January, Ron Steinke <rsteinke@w-link.net>

	* Eris/Avatar.*: Added velocity-based move() methods.

Sunday, 11th January, Ron Steinke <rsteinke@w-link.net>

	* Eris/Metaserver.*: On second thought, just move
	  the snprintf stuff into Metaserver.cpp. That way
	  Eris should continue to build fine, but dependent
	  software won't get hit with it.

Sunday, 11th January, Ron Steinke <rsteinke@w-link.net>

	* Eris/Metaserver.h: Put an #ifndef __MINGW32__ around
	  the snprintf and vsnprintf #defines.

Tuesday, 6th January 2004, Al Riddoch <alriddoch@zepler.org>

	* Eris/World.h, Eris/World.cpp: Add a signal to indicate if
	  if a player has successfully taken control of a new or existing
	  avatar.

Saturday, 20th December, Ron Steinke <rsteinke@w-link.net>

	* Don't need Avatar::GotEntity, World::Entered does
	  the same thing.

Saturday, 20th December, Ron Steinke <rsteinke@w-link.net>

	* Added a GotEntity signal to Avatar, so we can connect
	  callbacks to the character's entity when it arrives.

Friday, 19th December, Al Riddoch <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.

Thursday, 19th December, James Turner <james@worldforge.org>

    * Remove ancient socket references from Eris/Types.h - long
      since deprecated in favour of skstream

Monday, 8th December, James Turner, <james@worldforge.org>

    * Fix a warning on Mingw32, due to me using -1 in BaseConnection,
      when I should have used the constant supplied by skstream.

Friday, 5th December, Al Riddoch <alriddoch@zepler.org>

	* Fix LDADD for testEris so it works right.

Friday, 5th December, Al Riddoch <alriddoch@zepler.org>

	* Fix test/Makefile.am so the tests build but don't run.
